--- a/src/index.css
+++ b/src/index.css
@@ -131,6 +131,48 @@ nav {
   color: var(--clr-w);
 }
 
+.nav__actions {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  margin-right: 75px;
+}
+
+.nav__connect,
+.nav__withdraw {
+  width: 175px;
+  height: 50px;
+  margin-left: 10px;
+
+  background: rgba(15, 136, 13, 0.721);
+  color: var(--clr-white);
+
+  border: none;
+  border-radius: 4px;
+
+  font-family: "Open Sans";
+  font-size: 1.10em;
+  font-weight: 600;
+
+  cursor: pointer;
+  transition: all 250ms ease;
+}
+
+.nav__connect:hover,
+.nav__withdraw:hover {
+  background-color: var(--clr-dark-blue);
+  color: var(--clr-w);
+}
+
+.nav__withdraw {
+  background-color: rgba(255, 99, 71, 0.8); /* Light red color */
+}
+
+.nav__withdraw:hover {
+  background-color: #e63946; /* Darker red for hover */
+}
+
+
 
 /* ------------------------------------------------------ */
 /* -- HEADER -- */
